--- a/index.html
+++ b/index.html
@@ -23,47 +23,47 @@
     <body>
     	<div class="container">
     		<div class="row" id="heading">
-    			<div class="col-lg-2" id="peopleimg">
+    			<div class="col-xs-2" id="peopleimg">
     				<img src="img/peoplepic.png" id="pplpic">
     			</div>
-     			<div class="col-lg-6" id="title">
+     			<div class="col-xs-6" id="title">
      				<span id="firstrowtitle">HOW MUCH <span id="timetitle">TIME</span> DO YOU</span>
      				<br>
      				<span id="secondrowtitle">REALLY HAVE?</span>
     			</div>
-    			<div class="col-lg-1" id="clockimg">
+    			<div class="col-xs-1" id="clockimg">
     				<img src="img/clock.png" id="clockpic">
     			</div>
-    			<div class="col-lg-3" id="timerdiv">
+    			<div class="col-xs-3" id="timerdiv">
     				<span id="tenmintimer"></span>
     			</div>
     		</div>
     		<div class="row">
-    			<div class="col-lg-12" id="mainbox">
-    				<div class="col-lg-3" id="leftcol">
+    			<div class="col-xs-12" id="mainbox">
+    				<div class="col-xs-3" id="leftcol">
     					<span id="lcti"><u>WHO ARE <span id="you">YOU</span>?</u></span>
     					<br>
     					<button type="button" class="btn btn-info btn-lg" id="wmbtn" onclick="replacescreen('pc1')">WHITE MAN</button>
     					<br>
     					<button type="button" class="btn btn-info btn-lg" id="wwmbtn" onclick="replacescreen('pc2')">WHITE WOMAN</button>
     					<br>
-    	    			<button type="button" class="btn btn-info btn-lg" id="hmbtn" onclick="replacescreen('pc3')">HISPANIC MAN</button>
+    	    			<button type="button" class="btn btn-info btn-lg" id="hmbtn" onclick="replacescreen('pc3')">BLACK MAN</button>
     	    			<br>
-        				<button type="button" class="btn btn-info btn-lg" id="hwmbtn" onclick="replacescreen('pc4')">HISPANIC WOMAN</button>
+        				<button type="button" class="btn btn-info btn-lg" id="hwmbtn" onclick="replacescreen('pc4')">BLACK WOMAN</button>
         				<br>
-    					<button type="button" class="btn btn-info btn-lg" id="bmbtn" onclick="replacescreen('pc5')">BLACK MAN</button>
+                        <button type="button" class="btn btn-info btn-lg" id="ambtn" onclick="replacescreen('pc5')">ASIAN MAN</button>
+                        <br>
+                        <button type="button" class="btn btn-info btn-lg" id="awmbtn" onclick="replacescreen('pc6')">ASIAN WOMAN</button>
+                        <br>
+    					<button type="button" class="btn btn-info btn-lg" id="bmbtn" onclick="replacescreen('pc7')">HISPANIC MAN</button>
     					<br>
-    					<button type="button" class="btn btn-info btn-lg" id="bwmbtn" onclick="replacescreen('pc6')">BLACK WOMAN</button>
-                        <br>
-                        <button type="button" class="btn btn-info btn-lg" id="ambtn" onclick="replacescreen('pc7')">ASIAN MAN</button>
-                        <br>
-                        <button type="button" class="btn btn-info btn-lg" id="awmbtn" onclick="replacescreen('pc8')">ASIAN WOMAN</button>
+    					<button type="button" class="btn btn-info btn-lg" id="bwmbtn" onclick="replacescreen('pc8')">HISPANIC WOMAN</button>
 
     				</div>
-    				<div class="col-lg-5" id="midcol">
+    				<div class="col-xs-5" id="midcol">
     					<img src="img/jar.png" id="jarpic">    
     				</div>
-    				<div class="col-lg-4" id="rightcol">
+    				<div class="col-xs-4" id="rightcol">
     					<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     					<span id="fline">IMAGINE</span>
     					<br><br><br><br><br><br><br><br>
