--- a/index.html
+++ b/index.html
@@ -64,22 +64,14 @@
     					<img src="img/jar.png" id="jarpic">    
     				</div>
     				<div class="col-xs-4" id="rightcol">
-    					<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    					<span id="fline">IMAGINE</span>
-    					<br><br><br><br><br><br><br><br>
-    					<span id="sline">IF YOUR ENTIRE</span>
-    					<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    					<span id="tline">LIFE</span>
-    					<br><br><br><br><br><br>
-    					<span id="ftline">WAS REPRESENTED BY</span>
-    					<br><br><br><br><br><br><br><br><br><br>
-    					<span id="filine">THIS JAR &</span>
-    					<br><br><br><br><br><br><br>
-    					<span id="siline">THE EMPTY SPACE</span>
-    					<br><br><br><br><br><br><br>
-    					<span id="seline">WAS ALL YOU HAD</span>
-    					<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    					<span id="eline">LEFT...</span>
+    					<span class="words" id="fline">IMAGINE</span>
+    					<span class="words" id="sline">IF YOUR ENTIRE</span>
+    					<span class="words" id="tline">LIFE</span>
+    					<span class="words" id="ftline">WAS REPRESENTED BY</span>
+    					<span class="words" id="filine">THIS JAR &</span>
+    					<span class="words" id="siline">THE EMPTY SPACE</span>
+    					<span class="words" id="seline">WAS ALL YOU HAD</span>
+    					<span class="words" id="eline">LEFT...</span>
     				</div>
     			</div>
     		</div>
