Tweak js, clean up css

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     				<div class="col-xs-5" id="midcol">
     					<img src="img/jar.png" id="jarpic">    
     				</div>
-    				<div class="col-xs-4" id="rightcol">
-    					<span class="words" id="fline">IMAGINE</span>
-    					<span class="words" id="sline">IF YOUR ENTIRE</span>
-    					<span class="words" id="tline">LIFE</span>
-    					<span class="words" id="ftline">WAS REPRESENTED BY</span>
-    					<span class="words" id="filine">THIS JAR &</span>
-    					<span class="words" id="siline">THE EMPTY SPACE</span>
-    					<span class="words" id="seline">WAS ALL YOU HAD</span>
-    					<span class="words" id="eline">LEFT...</span>
+    				<div class="col-xs-4 words" id="rightcol">
+    					<span id="fline">IMAGINE</span>
+    					<span id="sline">IF YOUR ENTIRE</span>
+    					<span id="tline">LIFE</span>
+    					<span id="ftline">WAS REPRESENTED BY</span>
+    					<span id="filine">THIS JAR &</span>
+    					<span id="siline">THE EMPTY SPACE</span>
+    					<span id="seline">WAS ALL YOU HAD</span>
+    					<span id="eline">LEFT...</span>
     				</div>
     			</div>
     		</div>
